<resources>
    <string name="app_name">MTG Commander App</string>
    <string name="num_players_text">Number of Players</string>
    <string name="create_game_text">Create Game</string>
    <string name="players_2">2</string>
    <string name="players_3">3</string>
    <string name="players_4">4</string>
    <string name="subtract_button_text">-</string>
    <string name="add_health_button_text">+</string>
    <string name="player_health_text">Player Health</string>
    <string name="test_page">Test Page</string>
    <string name="commander_damage_tab_text">Commander Damage</string>
    <string name="health_tab_text">Health</string>
    <string name="cmd_dmg_text">CMD DMG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>